{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 34,
  "lineage": "838cc235-a17e-6b75-91c9-8f99cd2f3f9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdf4187412ed0056",
            "arn": "arn:aws:ec2:us-west-1:654654298266:elastic-ip/eipalloc-0fdf4187412ed0056",
            "association_id": "eipassoc-0ca8efb2f01bb2f2a",
            "domain": "vpc",
            "id": "eipalloc-0fdf4187412ed0056",
            "instance": "i-0ae00b0306b6518c3",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0f82a5d7378b8c0a7",
            "private_dns": "ip-10-0-1-36.us-west-1.compute.internal",
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-50-18-26-208.us-west-1.compute.amazonaws.com",
            "public_ip": "50.18.26.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web_instance",
            "aws_key_pair.new_key_pair",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.new_vpc",
            "data.aws_ami.shared_ami",
            "tls_private_key.new_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-037423c12456101e7",
            "arn": "arn:aws:ec2:us-west-1:654654298266:instance/i-0ae00b0306b6518c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae00b0306b6518c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mayi",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f82a5d7378b8c0a7",
            "private_dns": "ip-10-0-1-36.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "public_ip": "50.18.26.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d21c865e166c967",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04147a79b056b358f",
            "tags": {
              "Name": "Shared-AMI-Instance"
            },
            "tags_all": {
              "Name": "Shared-AMI-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05153cd9512617b17"
            ]
          },
          "dependencies": [
            "aws_key_pair.new_key_pair",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.new_vpc",
            "data.aws_ami.shared_ami",
            "tls_private_key.new_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:654654298266:internet-gateway/igw-0c236cc327a7a6fe1",
            "id": "igw-0c236cc327a7a6fe1",
            "owner_id": "654654298266",
            "tags": {
              "Name": "new-igw"
            },
            "tags_all": {
              "Name": "new-igw"
            },
            "vpc_id": "vpc-073374a265afae49e"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:654654298266:route-table/rtb-05030ef8c5afeff2a",
            "id": "rtb-05030ef8c5afeff2a",
            "owner_id": "654654298266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c236cc327a7a6fe1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-073374a265afae49e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073816168dbd4c7ad",
            "route_table_id": "rtb-05030ef8c5afeff2a",
            "subnet_id": "subnet-04147a79b056b358f"
          },
          "dependencies": [
            "aws_internet_gateway.new_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:654654298266:security-group/sg-05153cd9512617b17",
            "description": "Allow inbound HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05153cd9512617b17",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "654654298266",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-073374a265afae49e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:654654298266:subnet/subnet-04147a79b056b358f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04147a79b056b358f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654298266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-073374a265afae49e"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:654654298266:vpc/vpc-073374a265afae49e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007a9cf4cdf2ff52b",
            "default_route_table_id": "rtb-0bd219bbd51ab2138",
            "default_security_group_id": "sg-020961fb383bd4cbf",
            "dhcp_options_id": "dopt-06f2d58ab045608f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073374a265afae49e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd219bbd51ab2138",
            "owner_id": "654654298266",
            "tags": {
              "Name": "new-vpc"
            },
            "tags_all": {
              "Name": "new-vpc"
            }
          }
        }
      ]
    }
  ]
}